# deja-vu-delete

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/dejavu/: main.py
src/dejavu/file_handlers/: __init__.py  handlers.py
src/dejavu/images/: __init__.py  image.py
src/dejavy-frontend/: README.md  index.html  package-lock.json  package.json
src/dejavy-frontend/src/: App.vue
src/dejavy-frontend/src/components/: FileTree.vue  NestedList.vue  NestedListItems.vue  RefreshButton.vue
src/dejavy-frontend/src/layouts/default/: Default.vue  MainLayout.vue  SideBarLayout.vue
src/frontend/: index.html  main.js  styles.css
