[metadata]
name = dejavu
version = 0.1.0
description = A python application for identifying and deleting duplicated or similar pictures on a system
author = Kasper Janehag
author_email = kasper.janehag@gmail.com
license_files = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.11
install_requires =
    pillow
    imagehash
    numpy
    eel

[options.packages.find]
where=src